# prelegal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  catalog.json  docker-compose.yml
.claude/: settings.local.json
backend/: auth.py  config.py  database.py  main.py  models.py  pyproject.toml
backend/routers/: chat.py  templates.py  users.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: DocPreview.test.tsx  NDAForm.test.tsx  NDAPreview.test.tsx  formatDate.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AIChatPanel.tsx  DocPreview.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/components/__tests__/: DocPreview.test.tsx
frontend/lib/: api.ts  auth.ts  types.ts  utils.ts
scripts/: start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: BAA.md  DPA.md  LICENSE.txt  Pilot-Agreement.md
